# CornHub

./: CMakeLists.txt  Makefile  README.md  repomix-output.xml
data/: contents_data.txt  users_data.txt
include/: binary_tree.hpp  node.hpp
include/containers/: binary_tree.hpp  doubly_linked_list.hpp  node_tree.hpp
include/core/: content.hpp  genre.hpp  question.hpp  watched_entry.hpp
include/services/: ScoreCalculator.hpp  content_list.hpp  content_manager.hpp  data_manager.hpp  genre_manager.hpp  interaction_service.hpp  statistics_service.hpp  user_manager.hpp
include/ui/: console.hpp  screens.hpp  window.hpp
src/: main.cpp  main_console.cpp
src/containers/: binary_tree.cpp  doubly_linked_list.cpp
src/core/: comment.cpp  content.cpp  genre.cpp  question.cpp  watched_entry.cpp
src/services/: content_manager.cpp  data_manager.cpp  genre_manager.cpp  interaction_service.cpp  statistics_service.cpp  user_manager.cpp
src/ui/: console.cpp  window.cpp
tests/data/: comment_test.txt  content_test.txt
